# aiogram-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README copy.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy_to_vps.yml
src/: app.py  loader.py
src/config/: data_config.py
src/handlers/users/: start.py
src/keyboards/: __init__.py  checklist.py  location.py
src/states/: checklist.py
src/utils/: notify_admins.py  set_bot_commands.py
